# HuaweiAppGalleryMcp

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.json  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish-pypi.yml
huawei_appgallery_mcp/: auth.py  server.py
huawei_appgallery_mcp/api/: app_info.py  file_upload.py  language_info.py  publish.py  report.py
